[package]
name = "livekit"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8"
hex-literal = "0.3"
binread = "2.2"
binwrite = "0.2"
# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# async
futures-util = "*"
tokio = { version = "1.11", features = ["full"] }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
