[package]
name = "livekit"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8"
structopt = "0.3"
chrono = "0.4"
# compress
inflate = "0.4"
brotli-decompressor = "2.3"
# bin
binread = "2.2"
binwrite = "0.2"
# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# async
futures-util = "0.3"
tokio = { version = "1.11", features = ["full"] }
# net
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
# storage
rocksdb = { version = "0.16", default-features = false, features = ["lz4"] }

[dev-dependencies]
hex-literal = "0.3"
