[package]
name = "livekit-api"
version = "0.2.0"
edition = "2018"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# readme

[lib]
name = "livekit_api"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }

[features]
default = ["info", "feed", "stream"]
info = []
feed = []
stream = []
