[package]
name = "livekit-api"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_api"
path = "lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }

[features]
default = []
info = []
feed = []
stream = []
interact = []
