[package]
name = "livekit-api"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_api"
path = "lib.rs"

[dependencies]
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
# reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
# the same as reqwest
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "http2", "client", "runtime", "stream"] }
# TODO confirm if set properly
hyper-rustls = { version = "0.23", features = ["webpki-roots"] }

[features]
default = []
info = []
feed = []
stream = []
interact = []
