[package]
name = "livekit-feed-client"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_feed_client"
path = "lib.rs"

[dependencies]
log = { version = "0.4" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
async-channel = { version = "1.6" }
livekit-api = { path = "../api", default-features = false, features = ["feed"] }
livekit-feed = { path = "../feed" }
livekit-feed-storage = { path = "../feed-storage" }
# actix = "0.10"
