[package]
name = "livekit-feed-client"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_feed_client"
path = "lib.rs"

[dependencies]
log = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-channel = "1.6"
livekit-api = { path = "../api", features = ["feed"] }
livekit-feed = { path = "../feed" }
livekit-feed-storage = { path = "../feed-storage" }
# actix = "0.10"
