[package]
name = "livekit-feed-stor-raw"
version = "0.4.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[lib]
name = "livekit_feed_stor_raw"
path = "lib.rs"

[dependencies]
hex = "0.4"
crc32fast = "1"
tokio = { version = "1", features = ["rt"] }
blake3 = "1"
foundations = { git = "https://github.com/Berylsoft/foundations", features = ["num-enum", "usize-casting", "error-enum"] }
livekit-feed = { path = "../feed" }
