[package]
name = "livekit-feed-stor-raw"
version = "0.4.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[lib]
name = "livekit_feed_stor_raw"
path = "lib.rs"

[dependencies]
bytes = "1"
hex = "0.4"
crc32fast = "1"
tokio = { version = "1", features = ["fs"] }
foundations = { git = "https://github.com/Berylsoft/foundations", features = ["byterepr", "byterepr-macros"] }
kvdump = { git = "https://github.com/Berylsoft/KVDump", features = ["actor", "bytesbuf"] }
tokio-actor = { git = "https://github.com/Berylsoft/actor" }
livekit-feed = { path = "../feed" }
