[package]
name = "livekit-feed-storage"
version = "0.2.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_feed_storage"
path = "lib.rs"

[dependencies]
log = { version = "0.4" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
sled = { version = "0.34.7" }
livekit-api = { path = "../api", default-features = false, features = ["feed"] }
livekit-feed = { path = "../feed" }

[features]
rec = []
