[package]
name = "livekit-feed-storage"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_feed_storage"
path = "lib.rs"

[dependencies]
hex = "0.4"
log = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
livekit-api = { path = "../api" }
livekit-feed = { path = "../feed", features = ["stream"] }

[features]
rec = []
