[package]
name = "livekit-feed"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_feed"
path = "lib.rs"

[dependencies]
# base
crc32fast = "1.3"
hex = "0.4"
brotli-decompressor = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# storage
async-kvdump = { git = "https://github.com/Berylsoft/KVDump", optional = true }
# stream
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "time", "sync", "net"], optional = true }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"], optional = true }
livekit-api = { path = "../api", features = ["feed"], optional = true }

[dev-dependencies]
hex-literal = "0.3"

[features]
schema = []
storage = ["async-kvdump"]
stream = ["log", "rand", "futures", "tokio", "tokio-tungstenite", "livekit-api"]
