[package]
name = "livekit-feedrec"
version = "0.4.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[[bin]]
name = "feedrec"
path = "main.rs"

[dependencies]
hex = "0.4"
rand = "0.8"
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["all_components"] }
argh = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] } # "time", "sync", "net"
brapi-model = { git = "https://github.com/Berylsoft/brapi" }
brapi-client = { git = "https://github.com/Berylsoft/brapi" }
livekit-feed = { path = "../feed" }
livekit-feed-stor-raw = { path = "../feed-stor-raw" }
