[package]
name = "livekit-stream-get"
version = "0.3.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_stream_get"
path = "lib.rs"

[dependencies]
rand = "0.8"
bytes = "1.1"
log = "0.4"
# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# async
futures = "0.3"
tokio = { version = "1", features = ["full"] }
# project
livekit-api = { path = "../api", features = ["stream"] }
livekit-feed-client = { path = "../feed-client" }

[dev-dependencies]
hex-literal = "0.3"
