[package]
name = "livekit-stream"
version = "0.2.0"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/Berylsoft/LiveKit"
# description
# readme

[lib]
name = "livekit_stream"
path = "lib.rs"

[dependencies]
rand = "0.8"
chrono = "0.4"
bytes = "1.1"
log = "0.4"
# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# async
futures = "0.3"
tokio = { version = "1.12", features = ["full"] }
async-channel = "1.6"
# net
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
# project
livekit-api = { path = "../api", default-features = false, features = ["info", "stream"] }
livekit-feed-client = { path = "../feed-client" }

[dev-dependencies]
hex-literal = "0.3"
